--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,11 @@
-<html>
-  <head>
-    <title>Veronica ' blog</title>
-  </head>
-  <body>
-    <p>Hi there!</p>
-    <p>It works!</p>
-  </body>
-</html>
+<div>
+  <h1><a href="/">Django DAW Blog</a></h1>
+</div>
+
+{% for post in posts %}
+<div>
+  <p>published: {{ post.published_date }}</p>
+  <h1><a href="">{{ post.title }}</a></h1>
+  <p>{{ post.text|linebreaksbr }}</p>
+</div>
+{% endfor %}
