--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,54 @@
-<div>
-  <h1><a href="/">Django DAW Blog</a></h1>
-</div>
+{% load static %}
+<html>
+  <head>
+    <title>Django Daw blog</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+   />
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"
+   />
+   <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
+  </head>
+  <body>
+    <div class="page-header">
+      <h1><a href="/">Django Daw Blog</a></h1>
 
-{% for post in posts %}
-<div>
-  <p>published: {{ post.published_date }}</p>
-  <h1><a href="">{{ post.title }}</a></h1>
-  <p>{{ post.text|linebreaksbr }}</p>
-</div>
-{% endfor %}
+    </div>
+
+    <div class="content container">
+      <div class="row">
+        <div class="col-md-8">
+          {% for post in posts %}
+          <div class="post">
+            <div class="date">
+              <p>publicado: {{ post.published_date }}</p>
+            </div>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+    {% for post in posts %}
+
+    <div class="post">
+      <p>publicado: {{ post.published_date }}</p>
+      <h2><a href="">{{ post.title }}</a></h2>
+      <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+
+    
+  
+    {% endfor %}
+  </body>
+</html>
