Cambios de diseño.

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,6 +30,7 @@ rel="stylesheet" type="text/css">
     ></a>
     {% endif %}
     <h1><a href="/">Django DAW Blog</a></h1>
+    <h2><a href="/">Bienvenidos al blog de Veroncia </a></h2>
    </div>
  </body>
 </html>
