--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -14,7 +14,7 @@
        <td>{{ form.password }}</td>
     </tr>
    </table>
-   <input type="submit" value="login" />
-   <input type="hidden" name="next" value="{{ next }}" />
+   <input type='submit' value='login' />
+   <input type='hidden' name='next' value="{{ next }}" />
 </form>
 {% endblock %}
