cambios en comentarios 2.

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -41,7 +41,7 @@ comment.approved_comment %}
   <strong>{{ comment.author }}</strong>
   <p>{{ comment.text|linebreaks }}</p>
 </div>
-{% endif %} {% empty %}
+ {% empty %}
 <p>Sin comentarios :(</p>
 {% endfor %}
 {% endblock %}
